construct grain dictionary to work on grains rather than images

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -17,8 +17,10 @@
     "import numpy as np\n",
     "\n",
     "from topostats.io import LoadScans\n",
-    "from topostats.measure.curvature import \\\n",
-    "    discrete_angle_difference_per_nm_circular\n",
+    "from topostats.measure.curvature import (\n",
+    "    discrete_angle_difference_per_nm_circular,\n",
+    "    discrete_angle_difference_per_nm_linear,\n",
+    ")\n",
     "\n",
     "today = datetime.today().strftime(\"D-%Y-%m-%d-T-%H-%M\")\n",
     "print(today)"
@@ -69,114 +71,190 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = all_files[1]\n",
+    "grains_dictionary = {}\n",
     "\n",
-    "# load the file\n",
-    "loadscans = LoadScans([file], channel=\"dummy\")\n",
+    "loadscans = LoadScans(all_files, channel=\"dummy\")\n",
     "loadscans.get_data()\n",
     "img_dict = loadscans.img_dict\n",
-    "data = img_dict[file.stem]\n",
     "\n",
-    "print(data.keys())\n",
+    "grain_index = 0\n",
+    "for filename, file_data in img_dict.items():\n",
+    "    print(f\"getting data from {filename}\")\n",
+    "    image = file_data[\"image\"]\n",
+    "    ordered_trace_data = file_data[\"ordered_traces\"][\"above\"]\n",
+    "    for current_grain_index, grain_ordered_trace_data in ordered_trace_data.items():\n",
+    "        print(f\"  grain {current_grain_index}\")\n",
+    "        grains_dictionary[grain_index] = {}\n",
+    "        grains_dictionary[grain_index][\"molecule_data\"] = {}\n",
+    "        for molecule_index, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
+    "            molecule_data = {}\n",
+    "            molecule_data[\"ordered_coords\"] = molecule_ordered_trace_data[\"ordered_coords\"]\n",
+    "            molecule_data[\"heights\"] = molecule_ordered_trace_data[\"heights\"]\n",
+    "            molecule_data[\"distances\"] = molecule_ordered_trace_data[\"distances\"]\n",
+    "            bbox = molecule_ordered_trace_data[\"bbox\"]\n",
+    "            grains_dictionary[grain_index][\"molecule_data\"][molecule_index] = molecule_data\n",
+    "            # print(molecule_ordered_trace_data.keys())\n",
+    "        image_crop = image[\n",
+    "            bbox[0] : bbox[2],\n",
+    "            bbox[1] : bbox[3],\n",
+    "        ]\n",
+    "        full_grain_mask = file_data[\"grain_masks\"][\"above\"]\n",
+    "        grains_dictionary[grain_index][\"image\"] = image_crop\n",
+    "        grains_dictionary[grain_index][\"bbox\"] = bbox\n",
+    "        mask_crop = full_grain_mask[\n",
+    "            bbox[0] : bbox[2],\n",
+    "            bbox[1] : bbox[3],\n",
+    "        ]\n",
+    "        grains_dictionary[grain_index][\"mask\"] = mask_crop\n",
+    "        grains_dictionary[grain_index][\"filename\"] = file_data[\"filename\"]\n",
+    "        grains_dictionary[grain_index][\"pixel_to_nm_scaling\"] = file_data[\"pixel_to_nm_scaling\"]\n",
+    "        grain_index += 1\n",
     "\n",
-    "image = data[\"image\"]\n",
-    "splining_data = data[\"splining\"][\"above\"]\n",
-    "plt.imshow(image)\n",
-    "plt.show()\n",
+    "# for grain_index, grain_data in grains_dictionary.items():\n",
+    "#     print(f\"grain {grain_index}\")\n",
+    "#     print(grain_data[\"filename\"])\n",
+    "#     print(grain_data[\"pixel_to_nm_scaling\"])\n",
+    "#     image = grain_data[\"image\"]\n",
+    "#     plt.imshow(image)\n",
+    "#     for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "#         ordered_coords = molecule_data[\"ordered_coords\"]\n",
+    "#         plt.plot(ordered_coords[:, 1], ordered_coords[:, 0], \"r\")\n",
+    "#     plt.show()\n",
     "\n",
-    "for grain_index, grain_splining_data in splining_data.items():\n",
-    "    for molecule_index, molecule_splining_data in grain_splining_data.items():\n",
-    "        print(molecule_splining_data.keys())\n",
-    "        splined_coords = molecule_splining_data[\"spline_coords\"]\n",
-    "        bbox = molecule_splining_data[\"bbox\"]\n",
-    "        # plt.plot(ordered_coords[:, 1] + bbox[1], ordered_coords[:, 0] + bbox[0], \"r-\")\n",
+    "#     mask = grain_data[\"mask\"][:, :, 1]\n",
+    "#     plt.imshow(mask)\n",
+    "#     plt.show()\n",
     "\n",
-    "        grain_image = image[bbox[0] : bbox[2], bbox[1] : bbox[3]]\n",
-    "        plt.imshow(grain_image)\n",
+    "print(len(grains_dictionary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = all_files[0]\n",
     "\n",
-    "        curvatures = data[\"grain_curvature_stats\"][\"above\"][grain_index][molecule_index]\n",
-    "        print(f\"len curvatures: {len(curvatures)}\")\n",
-    "        print(f\"len ordered trace: {len(splined_coords)}\")\n",
-    "        for splined_coord_index, splined_coord in enumerate(splined_coords):\n",
-    "            # plot line between current and previous point with colour based on curvature\n",
-    "            if splined_coord_index == 0:\n",
+    "for file in all_files:\n",
+    "\n",
+    "    individual_plotting = False\n",
+    "\n",
+    "    # load the file\n",
+    "    loadscans = LoadScans([file], channel=\"dummy\")\n",
+    "    loadscans.get_data()\n",
+    "    img_dict = loadscans.img_dict\n",
+    "    data = img_dict[file.stem]\n",
+    "    print(data.keys())\n",
+    "\n",
+    "    image = data[\"image\"]\n",
+    "    splining_data = data[\"splining\"][\"above\"]\n",
+    "\n",
+    "    plt.imshow(image)\n",
+    "\n",
+    "    # ignore erroneously small splines\n",
+    "    min_splined_coords_num_points = 10\n",
+    "\n",
+    "    # gallery image\n",
+    "    n_cols = 3\n",
+    "\n",
+    "    for grain_index, grain_splining_data in splining_data.items():\n",
+    "        for molecule_index, molecule_splining_data in grain_splining_data.items():\n",
+    "            splined_coords = molecule_splining_data[\"spline_coords\"]\n",
+    "\n",
+    "            if len(splined_coords) < min_splined_coords_num_points:\n",
+    "                print(\n",
+    "                    f\"Skipping molecule {molecule_index} in grain {grain_index} as it has too few points ({len(splined_coords)} < {min_splined_coords_num_points})\"\n",
+    "                )\n",
     "                continue\n",
-    "            prev_coord = splined_coords[splined_coord_index - 1]\n",
-    "            curvature = curvatures[splined_coord_index - 1]\n",
-    "            normalised_curvature = (curvature - min(curvatures)) / (max(curvatures) - min(curvatures))\n",
-    "            plt.plot(\n",
-    "                [prev_coord[1], splined_coord[1]],\n",
-    "                [prev_coord[0], splined_coord[0]],\n",
-    "                c=(normalised_curvature, normalised_curvature, normalised_curvature),\n",
-    "            )\n",
-    "        plt.show()\n",
     "\n",
-    "        plt.plot(curvatures)\n",
-    "        plt.show()\n",
+    "            bbox = molecule_splining_data[\"bbox\"]\n",
+    "            # plt.plot(ordered_coords[:, 1] + bbox[1], ordered_coords[:, 0] + bbox[0], \"r-\")\n",
     "\n",
-    "        # plot zoom in of trace points\n",
-    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "        for splined_coord_index, splined_coord in enumerate(splined_coords):\n",
-    "            curvature = curvatures[splined_coord_index]\n",
-    "            normalised_curvature = (curvature - min(curvatures)) / (max(curvatures) - min(curvatures))\n",
-    "            plt.plot(\n",
-    "                splined_coord[1],\n",
-    "                splined_coord[0],\n",
-    "                \".\",\n",
-    "                c=(normalised_curvature, 1 - normalised_curvature, normalised_curvature),\n",
-    "                markersize=1,\n",
-    "            )\n",
-    "        plt.gca().invert_yaxis()\n",
-    "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
-    "        plt.show()\n",
+    "            grain_image = image[bbox[0] : bbox[2], bbox[1] : bbox[3]]\n",
     "\n",
-    "        # resample the spline to get points at fixed intervals\n",
-    "        interval = 5\n",
+    "            if individual_plotting:\n",
+    "                fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "                plt.imshow(grain_image)\n",
     "\n",
-    "        resampled_points = []\n",
-    "        resampled_points.append(splined_coords[0])\n",
-    "        current_spline_index = 1\n",
-    "        while True:\n",
-    "            current_point = resampled_points[-1]\n",
-    "            next_splined_point = splined_coords[current_spline_index]\n",
-    "            distance_to_next_splined_point = np.linalg.norm(next_splined_point - current_point)\n",
-    "            # if the distance to the next splined point is less than the interval, then skip to the next point\n",
-    "            if distance_to_next_splined_point < interval:\n",
-    "                current_spline_index += 1\n",
-    "                if current_spline_index >= len(splined_coords):\n",
-    "                    break\n",
-    "                continue\n",
-    "            new_interpolated_point = interpolate_between_two_points(current_point, next_splined_point, interval)\n",
-    "            resampled_points.append(new_interpolated_point)\n",
+    "            # resample the spline to get points at fixed intervals\n",
+    "            interval = 5\n",
     "\n",
-    "        resampled_points = np.array(resampled_points)\n",
+    "            resampled_points = []\n",
+    "            resampled_points.append(splined_coords[0])\n",
+    "            current_spline_index = 1\n",
+    "            while True:\n",
+    "                current_point = resampled_points[-1]\n",
+    "                next_splined_point = splined_coords[current_spline_index]\n",
+    "                distance_to_next_splined_point = np.linalg.norm(next_splined_point - current_point)\n",
+    "                # if the distance to the next splined point is less than the interval, then skip to the next point\n",
+    "                if distance_to_next_splined_point < interval:\n",
+    "                    current_spline_index += 1\n",
+    "                    if current_spline_index >= len(splined_coords):\n",
+    "                        break\n",
+    "                    continue\n",
+    "                new_interpolated_point = interpolate_between_two_points(current_point, next_splined_point, interval)\n",
+    "                resampled_points.append(new_interpolated_point)\n",
     "\n",
-    "        resampled_curvatures = discrete_angle_difference_per_nm_circular(resampled_points)\n",
+    "            resampled_points = np.array(resampled_points)\n",
     "\n",
-    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "        for resampled_point_index, resampled_point in enumerate(resampled_points):\n",
-    "            curvature = resampled_curvatures[resampled_point_index]\n",
-    "            normalised_curvature = (curvature - min(resampled_curvatures)) / (\n",
-    "                max(resampled_curvatures) - min(resampled_curvatures)\n",
-    "            )\n",
-    "            plt.plot(\n",
-    "                resampled_point[1],\n",
-    "                resampled_point[0],\n",
-    "                \"o\",\n",
-    "                c=(normalised_curvature, 1 - normalised_curvature, normalised_curvature),\n",
-    "                markersize=5,\n",
-    "            )\n",
-    "        plt.gca().invert_yaxis()\n",
-    "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
-    "        plt.show()\n",
+    "            resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points)\n",
     "\n",
-    "        curvature_threshold = 0.35\n",
+    "            curvature_threshold = 0.30\n",
+    "            curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
     "\n",
-    "        plt.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
-    "        plt.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
-    "        plt.legend()\n",
-    "        plt.ylim(-0.1, 0.5)\n",
-    "        plt.show()"
+    "            if individual_plotting:\n",
+    "                for resampled_point_index, resampled_point in enumerate(resampled_points):\n",
+    "                    curvature = resampled_curvatures[resampled_point_index]\n",
+    "                    # colour the curvature to be between 0.5 and -0.5\n",
+    "                    colour = (curvature + 0.5) / 1\n",
+    "                    plt.plot(\n",
+    "                        resampled_point[1],\n",
+    "                        resampled_point[0],\n",
+    "                        \"o\",\n",
+    "                        c=plt.get_cmap(\"bwr\")(colour),\n",
+    "                        markersize=5,\n",
+    "                    )\n",
+    "\n",
+    "                for defect_index in curvature_defects:\n",
+    "                    resampled_point = resampled_points[defect_index]\n",
+    "                    plt.plot(\n",
+    "                        resampled_point[1],\n",
+    "                        resampled_point[0],\n",
+    "                        \"o\",\n",
+    "                        c=\"r\",\n",
+    "                        markersize=10,\n",
+    "                    )\n",
+    "\n",
+    "            if individual_plotting:\n",
+    "                plt.gca().invert_yaxis()\n",
+    "                plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
+    "                plt.show()\n",
+    "\n",
+    "                plt.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
+    "                plt.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
+    "\n",
+    "                plt.legend()\n",
+    "                plt.ylim(-0.1, 0.5)\n",
+    "                plt.show()\n",
+    "\n",
+    "            # plt.plot(resampled_points[:, 1] + bbox[1], resampled_points[:, 0] + bbox[0], \"w-\")\n",
+    "            # plot curvature defects\n",
+    "            for defect_index in curvature_defects:\n",
+    "                resampled_point = resampled_points[defect_index]\n",
+    "                plt.plot(\n",
+    "                    resampled_point[1] + bbox[1], resampled_point[0] + bbox[0], \"o\", c=\"red\", markersize=2, alpha=1\n",
+    "                )\n",
+    "\n",
+    "            if len(curvature_defects > 0):\n",
+    "                # draw a red box around the bbox\n",
+    "                plt.plot(\n",
+    "                    [bbox[1], bbox[3], bbox[3], bbox[1], bbox[1]],\n",
+    "                    [bbox[0], bbox[0], bbox[2], bbox[2], bbox[0]],\n",
+    "                    \"r-\",\n",
+    "                    alpha=0.5,\n",
+    "                )\n",
+    "    plt.show()"
    ]
   },
   {
