switch to using nm points

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -66,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## construct grain dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -86,13 +93,19 @@
     "        print(f\"  grain {current_grain_index}\")\n",
     "        grains_dictionary[grain_index] = {}\n",
     "        grains_dictionary[grain_index][\"molecule_data\"] = {}\n",
-    "        for molecule_index, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
+    "        for current_molecule_index, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
     "            molecule_data = {}\n",
     "            molecule_data[\"ordered_coords\"] = molecule_ordered_trace_data[\"ordered_coords\"]\n",
     "            molecule_data[\"heights\"] = molecule_ordered_trace_data[\"heights\"]\n",
     "            molecule_data[\"distances\"] = molecule_ordered_trace_data[\"distances\"]\n",
     "            bbox = molecule_ordered_trace_data[\"bbox\"]\n",
-    "            grains_dictionary[grain_index][\"molecule_data\"][molecule_index] = molecule_data\n",
+    "            grains_dictionary[grain_index][\"molecule_data\"][current_molecule_index] = molecule_data\n",
+    "\n",
+    "            splining_coords = file_data[\"splining\"][\"above\"][current_grain_index][current_molecule_index][\n",
+    "                \"spline_coords\"\n",
+    "            ]\n",
+    "            molecule_data[\"spline_coords\"] = splining_coords\n",
+    "\n",
     "            # print(molecule_ordered_trace_data.keys())\n",
     "        image_crop = image[\n",
     "            bbox[0] : bbox[2],\n",
@@ -134,23 +147,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = all_files[0]\n",
+    "for grain_index, grain_data in grains_dictionary.items():\n",
+    "    print(f\"grain {grain_index}\")\n",
     "\n",
-    "for file in all_files:\n",
-    "\n",
-    "    individual_plotting = False\n",
-    "\n",
-    "    # load the file\n",
-    "    loadscans = LoadScans([file], channel=\"dummy\")\n",
-    "    loadscans.get_data()\n",
-    "    img_dict = loadscans.img_dict\n",
-    "    data = img_dict[file.stem]\n",
-    "    print(data.keys())\n",
-    "\n",
-    "    image = data[\"image\"]\n",
-    "    splining_data = data[\"splining\"][\"above\"]\n",
-    "\n",
-    "    plt.imshow(image)\n",
+    "    image = grain_data[\"image\"]\n",
+    "    mask = grain_data[\"mask\"]\n",
+    "    bbox = grain_data[\"bbox\"]\n",
+    "    p2nm = grain_data[\"pixel_to_nm_scaling\"]\n",
     "\n",
     "    # ignore erroneously small splines\n",
     "    min_splined_coords_num_points = 10\n",
@@ -158,103 +161,84 @@
     "    # gallery image\n",
     "    n_cols = 3\n",
     "\n",
-    "    for grain_index, grain_splining_data in splining_data.items():\n",
-    "        for molecule_index, molecule_splining_data in grain_splining_data.items():\n",
-    "            splined_coords = molecule_splining_data[\"spline_coords\"]\n",
+    "    for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "        splined_coords_px = molecule_data[\"spline_coords\"]\n",
+    "        splined_coords_nm = splined_coords_px * p2nm\n",
     "\n",
-    "            if len(splined_coords) < min_splined_coords_num_points:\n",
-    "                print(\n",
-    "                    f\"Skipping molecule {molecule_index} in grain {grain_index} as it has too few points ({len(splined_coords)} < {min_splined_coords_num_points})\"\n",
-    "                )\n",
+    "        if len(splined_coords_nm) < min_splined_coords_num_points:\n",
+    "            print(\n",
+    "                f\"Skipping molecule {current_molecule_index} in grain {grain_index} as it has too few points ({len(splined_coords_nm)} < {min_splined_coords_num_points})\"\n",
+    "            )\n",
+    "            continue\n",
+    "\n",
+    "        # resample the spline to get points at fixed intervals\n",
+    "        interval_nm = 5\n",
+    "\n",
+    "        resampled_points_nm = []\n",
+    "        resampled_points_nm.append(splined_coords_nm[0])\n",
+    "        current_spline_index = 1\n",
+    "        while True:\n",
+    "            current_point = resampled_points_nm[-1]\n",
+    "            next_splined_point = splined_coords_nm[current_spline_index]\n",
+    "            distance_to_next_splined_point = np.linalg.norm(next_splined_point - current_point)\n",
+    "            # if the distance to the next splined point is less than the interval, then skip to the next point\n",
+    "            if distance_to_next_splined_point < interval_nm:\n",
+    "                current_spline_index += 1\n",
+    "                if current_spline_index >= len(splined_coords_nm):\n",
+    "                    break\n",
     "                continue\n",
+    "            new_interpolated_point = interpolate_between_two_points(current_point, next_splined_point, interval_nm)\n",
+    "            resampled_points_nm.append(new_interpolated_point)\n",
     "\n",
-    "            bbox = molecule_splining_data[\"bbox\"]\n",
-    "            # plt.plot(ordered_coords[:, 1] + bbox[1], ordered_coords[:, 0] + bbox[0], \"r-\")\n",
+    "        resampled_points_nm = np.array(resampled_points_nm)\n",
     "\n",
-    "            grain_image = image[bbox[0] : bbox[2], bbox[1] : bbox[3]]\n",
+    "        resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points_nm)\n",
     "\n",
-    "            if individual_plotting:\n",
-    "                fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "                plt.imshow(grain_image)\n",
+    "        curvature_threshold = 0.30\n",
+    "        curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
     "\n",
-    "            # resample the spline to get points at fixed intervals\n",
-    "            interval = 5\n",
+    "        # plot the molecule\n",
+    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "        plt.imshow(image)\n",
+    "        # change the coordinates of the plot to be in nanometers using the pixel to nm scaling ratio\n",
+    "        for resampled_point_index, resampled_point in enumerate(resampled_points_nm):\n",
+    "            resampled_point /= p2nm\n",
+    "            curvature = resampled_curvatures[resampled_point_index]\n",
+    "            # colour the curvature to be between 0.5 and -0.5\n",
+    "            colour = (curvature + 0.5) / 1\n",
+    "            plt.plot(\n",
+    "                resampled_point[1],\n",
+    "                resampled_point[0],\n",
+    "                \"o\",\n",
+    "                c=plt.get_cmap(\"bwr\")(colour),\n",
+    "                markersize=5,\n",
+    "            )\n",
     "\n",
-    "            resampled_points = []\n",
-    "            resampled_points.append(splined_coords[0])\n",
-    "            current_spline_index = 1\n",
-    "            while True:\n",
-    "                current_point = resampled_points[-1]\n",
-    "                next_splined_point = splined_coords[current_spline_index]\n",
-    "                distance_to_next_splined_point = np.linalg.norm(next_splined_point - current_point)\n",
-    "                # if the distance to the next splined point is less than the interval, then skip to the next point\n",
-    "                if distance_to_next_splined_point < interval:\n",
-    "                    current_spline_index += 1\n",
-    "                    if current_spline_index >= len(splined_coords):\n",
-    "                        break\n",
-    "                    continue\n",
-    "                new_interpolated_point = interpolate_between_two_points(current_point, next_splined_point, interval)\n",
-    "                resampled_points.append(new_interpolated_point)\n",
+    "        for defect_index in curvature_defects:\n",
+    "            resampled_point = resampled_points_nm[defect_index] / p2nm\n",
+    "            plt.plot(\n",
+    "                resampled_point[1],\n",
+    "                resampled_point[0],\n",
+    "                \"o\",\n",
+    "                c=\"r\",\n",
+    "                markersize=10,\n",
+    "            )\n",
     "\n",
-    "            resampled_points = np.array(resampled_points)\n",
+    "        plt.gca().invert_yaxis()\n",
+    "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
+    "        plt.title(f\"grain {grain_index} molecule {molecule_index}\")\n",
+    "        plt.show()\n",
     "\n",
-    "            resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points)\n",
+    "        # plot curvatures\n",
+    "        plt.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
+    "        plt.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
+    "        plt.legend()\n",
+    "        plt.ylim(-0.1, 0.5)\n",
+    "        plt.title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
+    "        plt.show()\n",
     "\n",
-    "            curvature_threshold = 0.30\n",
-    "            curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
-    "\n",
-    "            if individual_plotting:\n",
-    "                for resampled_point_index, resampled_point in enumerate(resampled_points):\n",
-    "                    curvature = resampled_curvatures[resampled_point_index]\n",
-    "                    # colour the curvature to be between 0.5 and -0.5\n",
-    "                    colour = (curvature + 0.5) / 1\n",
-    "                    plt.plot(\n",
-    "                        resampled_point[1],\n",
-    "                        resampled_point[0],\n",
-    "                        \"o\",\n",
-    "                        c=plt.get_cmap(\"bwr\")(colour),\n",
-    "                        markersize=5,\n",
-    "                    )\n",
-    "\n",
-    "                for defect_index in curvature_defects:\n",
-    "                    resampled_point = resampled_points[defect_index]\n",
-    "                    plt.plot(\n",
-    "                        resampled_point[1],\n",
-    "                        resampled_point[0],\n",
-    "                        \"o\",\n",
-    "                        c=\"r\",\n",
-    "                        markersize=10,\n",
-    "                    )\n",
-    "\n",
-    "            if individual_plotting:\n",
-    "                plt.gca().invert_yaxis()\n",
-    "                plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
-    "                plt.show()\n",
-    "\n",
-    "                plt.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
-    "                plt.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
-    "\n",
-    "                plt.legend()\n",
-    "                plt.ylim(-0.1, 0.5)\n",
-    "                plt.show()\n",
-    "\n",
-    "            # plt.plot(resampled_points[:, 1] + bbox[1], resampled_points[:, 0] + bbox[0], \"w-\")\n",
-    "            # plot curvature defects\n",
-    "            for defect_index in curvature_defects:\n",
-    "                resampled_point = resampled_points[defect_index]\n",
-    "                plt.plot(\n",
-    "                    resampled_point[1] + bbox[1], resampled_point[0] + bbox[0], \"o\", c=\"red\", markersize=2, alpha=1\n",
-    "                )\n",
-    "\n",
-    "            if len(curvature_defects > 0):\n",
-    "                # draw a red box around the bbox\n",
-    "                plt.plot(\n",
-    "                    [bbox[1], bbox[3], bbox[3], bbox[1], bbox[1]],\n",
-    "                    [bbox[0], bbox[0], bbox[2], bbox[2], bbox[0]],\n",
-    "                    \"r-\",\n",
-    "                    alpha=0.5,\n",
-    "                )\n",
-    "    plt.show()"
+    "    if grain_index > 20:\n",
+    "        break"
    ]
   },
   {
