[WIP] attempt to fix bounding box padding and trace proper positions

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -17,6 +17,7 @@
     "import numpy as np\n",
     "\n",
     "from topostats.io import LoadScans\n",
+    "from topostats.unet_masking import make_bounding_box_square, pad_bounding_box\n",
     "from topostats.measure.curvature import (\n",
     "    discrete_angle_difference_per_nm_circular,\n",
     "    discrete_angle_difference_per_nm_linear,\n",
@@ -84,6 +85,7 @@
     "loadscans.get_data()\n",
     "img_dict = loadscans.img_dict\n",
     "\n",
+    "bbox_padding = 0\n",
     "grain_index = 0\n",
     "for filename, file_data in img_dict.items():\n",
     "    print(f\"getting data from {filename}\")\n",
@@ -107,16 +109,22 @@
     "            molecule_data[\"spline_coords\"] = splining_coords\n",
     "\n",
     "            # print(molecule_ordered_trace_data.keys())\n",
+    "        bbox_square = make_bounding_box_square(bbox[0], bbox[1], bbox[2], bbox[3], image.shape)\n",
+    "        bbox_padded = pad_bounding_box(\n",
+    "            bbox_square[0], bbox_square[1], bbox_square[2], bbox_square[3], image.shape, padding=bbox_padding\n",
+    "        )\n",
+    "\n",
     "        image_crop = image[\n",
-    "            bbox[0] : bbox[2],\n",
-    "            bbox[1] : bbox[3],\n",
+    "            bbox_padded[0] : bbox_padded[2],\n",
+    "            bbox_padded[1] : bbox_padded[3],\n",
     "        ]\n",
     "        full_grain_mask = file_data[\"grain_masks\"][\"above\"]\n",
     "        grains_dictionary[grain_index][\"image\"] = image_crop\n",
-    "        grains_dictionary[grain_index][\"bbox\"] = bbox\n",
+    "        grains_dictionary[grain_index][\"bbox\"] = bbox_padded\n",
+    "        grains_dictionary[grain_index][\"padding\"] = bbox_padding\n",
     "        mask_crop = full_grain_mask[\n",
-    "            bbox[0] : bbox[2],\n",
-    "            bbox[1] : bbox[3],\n",
+    "            bbox_padded[0] : bbox_padded[2],\n",
+    "            bbox_padded[1] : bbox_padded[3],\n",
     "        ]\n",
     "        grains_dictionary[grain_index][\"mask\"] = mask_crop\n",
     "        grains_dictionary[grain_index][\"filename\"] = file_data[\"filename\"]\n",
@@ -154,15 +162,15 @@
     "    mask = grain_data[\"mask\"]\n",
     "    bbox = grain_data[\"bbox\"]\n",
     "    p2nm = grain_data[\"pixel_to_nm_scaling\"]\n",
+    "    bbox_padding = grain_data[\"padding\"]\n",
     "\n",
     "    # ignore erroneously small splines\n",
     "    min_splined_coords_num_points = 10\n",
     "\n",
-    "    # gallery image\n",
-    "    n_cols = 3\n",
-    "\n",
     "    for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
     "        splined_coords_px = molecule_data[\"spline_coords\"]\n",
+    "        bbox_top_left = np.array([bbox[1], bbox[0]])\n",
+    "        splined_coords_px += bbox_top_left\n",
     "        splined_coords_nm = splined_coords_px * p2nm\n",
     "\n",
     "        if len(splined_coords_nm) < min_splined_coords_num_points:\n",
@@ -226,7 +234,7 @@
     "\n",
     "        plt.gca().invert_yaxis()\n",
     "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
-    "        plt.title(f\"grain {grain_index} molecule {molecule_index}\")\n",
+    "        plt.title(f\"grain {grain_index} molecule {molecule_index} bbox: {bbox} padding: {bbox_padding}\")\n",
     "        plt.show()\n",
     "\n",
     "        # plot curvatures\n",
