fix coordinate alignment issue

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -85,7 +85,7 @@
     "loadscans.get_data()\n",
     "img_dict = loadscans.img_dict\n",
     "\n",
-    "bbox_padding = 0\n",
+    "bbox_padding = 10\n",
     "grain_index = 0\n",
     "for filename, file_data in img_dict.items():\n",
     "    print(f\"getting data from {filename}\")\n",
@@ -113,6 +113,8 @@
     "        bbox_padded = pad_bounding_box(\n",
     "            bbox_square[0], bbox_square[1], bbox_square[2], bbox_square[3], image.shape, padding=bbox_padding\n",
     "        )\n",
+    "        added_left = bbox_padded[1] - bbox[1]\n",
+    "        added_top = bbox_padded[0] - bbox[0]\n",
     "\n",
     "        image_crop = image[\n",
     "            bbox_padded[0] : bbox_padded[2],\n",
@@ -120,7 +122,10 @@
     "        ]\n",
     "        full_grain_mask = file_data[\"grain_masks\"][\"above\"]\n",
     "        grains_dictionary[grain_index][\"image\"] = image_crop\n",
+    "        grains_dictionary[grain_index][\"full_image\"] = image\n",
     "        grains_dictionary[grain_index][\"bbox\"] = bbox_padded\n",
+    "        grains_dictionary[grain_index][\"added_left\"] = added_left\n",
+    "        grains_dictionary[grain_index][\"added_top\"] = added_top\n",
     "        grains_dictionary[grain_index][\"padding\"] = bbox_padding\n",
     "        mask_crop = full_grain_mask[\n",
     "            bbox_padded[0] : bbox_padded[2],\n",
@@ -158,19 +163,25 @@
     "for grain_index, grain_data in grains_dictionary.items():\n",
     "    print(f\"grain {grain_index}\")\n",
     "\n",
+    "    full_image = grain_data[\"full_image\"]\n",
     "    image = grain_data[\"image\"]\n",
     "    mask = grain_data[\"mask\"]\n",
     "    bbox = grain_data[\"bbox\"]\n",
     "    p2nm = grain_data[\"pixel_to_nm_scaling\"]\n",
     "    bbox_padding = grain_data[\"padding\"]\n",
+    "    bbox_added_left = grain_data[\"added_left\"]\n",
+    "    bbox_added_top = grain_data[\"added_top\"]\n",
+    "\n",
+    "    plt.imshow(full_image)\n",
+    "    plt.show()\n",
     "\n",
     "    # ignore erroneously small splines\n",
     "    min_splined_coords_num_points = 10\n",
     "\n",
     "    for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
     "        splined_coords_px = molecule_data[\"spline_coords\"]\n",
-    "        bbox_top_left = np.array([bbox[1], bbox[0]])\n",
-    "        splined_coords_px += bbox_top_left\n",
+    "        splined_coords_px[:, 0] -= bbox_added_top\n",
+    "        splined_coords_px[:, 1] -= bbox_added_left\n",
     "        splined_coords_nm = splined_coords_px * p2nm\n",
     "\n",
     "        if len(splined_coords_nm) < min_splined_coords_num_points:\n",
@@ -232,7 +243,6 @@
     "                markersize=10,\n",
     "            )\n",
     "\n",
-    "        plt.gca().invert_yaxis()\n",
     "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
     "        plt.title(f\"grain {grain_index} molecule {molecule_index} bbox: {bbox} padding: {bbox_padding}\")\n",
     "        plt.show()\n",
