break out resampling of points into new function

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -15,6 +15,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import numpy.typing as npt\n",
     "\n",
     "from topostats.io import LoadScans\n",
     "from topostats.unet_masking import make_bounding_box_square, pad_bounding_box\n",
@@ -88,11 +89,11 @@
     "bbox_padding = 10\n",
     "grain_index = 0\n",
     "for filename, file_data in img_dict.items():\n",
-    "    print(f\"getting data from {filename}\")\n",
+    "    # print(f\"getting data from {filename}\")\n",
     "    image = file_data[\"image\"]\n",
     "    ordered_trace_data = file_data[\"ordered_traces\"][\"above\"]\n",
     "    for current_grain_index, grain_ordered_trace_data in ordered_trace_data.items():\n",
-    "        print(f\"  grain {current_grain_index}\")\n",
+    "        # print(f\"  grain {current_grain_index}\")\n",
     "        grains_dictionary[grain_index] = {}\n",
     "        grains_dictionary[grain_index][\"molecule_data\"] = {}\n",
     "        for current_molecule_index, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
@@ -160,6 +161,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def resample_points_regular_interval(points: npt.NDArray, interval: float):\n",
+    "    \"\"\"Resample a set of points to be at regular intervals\"\"\"\n",
+    "\n",
+    "    resampled_points = []\n",
+    "    resampled_points.append(points[0])\n",
+    "    current_point_index = 1\n",
+    "    while True:\n",
+    "        current_point = resampled_points[-1]\n",
+    "        next_original_point = points[current_point_index]\n",
+    "        distance_to_next_splined_point = np.linalg.norm(next_original_point - current_point)\n",
+    "        # if the distance to the next splined point is less than the interval, then skip to the next point\n",
+    "        if distance_to_next_splined_point < interval:\n",
+    "            current_point_index += 1\n",
+    "            if current_point_index >= len(points):\n",
+    "                break\n",
+    "            continue\n",
+    "        new_interpolated_point = interpolate_between_two_points(current_point, next_original_point, interval)\n",
+    "        resampled_points.append(new_interpolated_point)\n",
+    "\n",
+    "    resampled_points = np.array(resampled_points)\n",
+    "\n",
+    "    return resampled_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for grain_index, grain_data in grains_dictionary.items():\n",
     "    print(f\"grain {grain_index}\")\n",
     "\n",
@@ -191,28 +222,10 @@
     "            continue\n",
     "\n",
     "        # resample the spline to get points at fixed intervals\n",
-    "        interval_nm = 5\n",
-    "\n",
-    "        resampled_points_nm = []\n",
-    "        resampled_points_nm.append(splined_coords_nm[0])\n",
-    "        current_spline_index = 1\n",
-    "        while True:\n",
-    "            current_point = resampled_points_nm[-1]\n",
-    "            next_splined_point = splined_coords_nm[current_spline_index]\n",
-    "            distance_to_next_splined_point = np.linalg.norm(next_splined_point - current_point)\n",
-    "            # if the distance to the next splined point is less than the interval, then skip to the next point\n",
-    "            if distance_to_next_splined_point < interval_nm:\n",
-    "                current_spline_index += 1\n",
-    "                if current_spline_index >= len(splined_coords_nm):\n",
-    "                    break\n",
-    "                continue\n",
-    "            new_interpolated_point = interpolate_between_two_points(current_point, next_splined_point, interval_nm)\n",
-    "            resampled_points_nm.append(new_interpolated_point)\n",
-    "\n",
-    "        resampled_points_nm = np.array(resampled_points_nm)\n",
-    "\n",
-    "        resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points_nm)\n",
-    "\n",
+    "        interval_nm = 5.0\n",
+    "        resampled_points = resample_points_regular_interval(points=splined_coords_nm, interval=interval_nm)\n",
+    "        resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points)\n",
+    "        # threshold the curvature to find defects\n",
     "        curvature_threshold = 0.30\n",
     "        curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
     "\n",
@@ -220,7 +233,7 @@
     "        fig, ax = plt.subplots(figsize=(10, 10))\n",
     "        plt.imshow(image)\n",
     "        # change the coordinates of the plot to be in nanometers using the pixel to nm scaling ratio\n",
-    "        for resampled_point_index, resampled_point in enumerate(resampled_points_nm):\n",
+    "        for resampled_point_index, resampled_point in enumerate(resampled_points):\n",
     "            resampled_point /= p2nm\n",
     "            curvature = resampled_curvatures[resampled_point_index]\n",
     "            # colour the curvature to be between 0.5 and -0.5\n",
@@ -234,7 +247,7 @@
     "            )\n",
     "\n",
     "        for defect_index in curvature_defects:\n",
-    "            resampled_point = resampled_points_nm[defect_index] / p2nm\n",
+    "            resampled_point = resampled_points[defect_index] / p2nm\n",
     "            plt.plot(\n",
     "                resampled_point[1],\n",
     "                resampled_point[0],\n",
